nabber doesn’t collapse any more, icons aren’t correctly clickable anymore, mouse doesn’t change on hover either

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,25 @@
     margin-right: 15px;
 }
 
+@media (max-width: 768px) {
+  .navbar-nav>li, .navbar-nav{
+    float: left !important;
+  }
+
+  .navbar-nav.navbar-right:last-child{
+    margin-right: -15px !important;
+  }
+
+  .navbar-right{
+    float: right !important;
+  }
+
+  .icon {
+    width: 25px;
+  }
+}
+
+
 @media (min-width: 768px) {
   .img-icon {
     width: 70px;
